--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,18 @@
         android:theme="@style/Theme.FinalProjectApplication"
         tools:targetApi="31">
         <activity
+            android:name=".Portfolio"
+            android:exported="false" />
+        <activity
+            android:name=".CyberSecurity"
+            android:exported="false" />
+        <activity
+            android:name=".HtmlCss"
+            android:exported="false" />
+        <activity
+            android:name=".Recognition"
+            android:exported="false" />
+        <activity
             android:name=".Database"
             android:exported="false" />
         <activity
