--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,64 +1,56 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.finalprojectapplication">
+
+    <!-- Permissions for notifications and alarms -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM"/>
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.FinalProjectApplication"
-        tools:targetApi="31">
-        <activity
-            android:name=".Portfolio"
+        android:supportsRtl="false"
+        android:theme="@style/Theme.FinalProjectApplication">
+
+        <!-- Notification Receiver -->
+        <receiver android:name=".NotificationReceiver"
             android:exported="false" />
-        <activity
-            android:name=".CyberSecurity"
+        <!-- Main Activity -->
+        <activity android:name=".MainActivity"
+            android:exported="false"/>
+        <!-- Other Activities -->
+        <activity android:name=".Certification"
+            android:exported="false"/>
+        <activity android:name=".Portfolio"
             android:exported="false" />
-        <activity
-            android:name=".HtmlCss"
+        <activity android:name=".CyberSecurity"
             android:exported="false" />
-        <activity
-            android:name=".Recognition"
+        <activity android:name=".HtmlCss"
             android:exported="false" />
-        <activity
-            android:name=".Database"
+        <activity android:name=".Recognition"
             android:exported="false" />
-        <activity
-            android:name=".Exhibit"
+        <activity android:name=".Database"
             android:exported="false" />
-        <activity
-            android:name=".Certification"
+        <activity android:name=".Exhibit"
             android:exported="false" />
-        <activity
-            android:name=".OngoingEvents"
+        <activity android:name=".OngoingEvents"
             android:exported="false" />
-        <activity
-            android:name=".FutureEvents"
+        <activity android:name=".FutureEvents"
             android:exported="false" />
-        <activity
-            android:name=".PastEvents"
+        <activity android:name=".PastEvents"
             android:exported="false" />
-        <activity
-            android:name=".EventList"
+        <activity android:name=".EventList"
             android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".SplashScreen"
+        <!-- Splash Screen Activity -->
+        <activity android:name=".SplashScreen"
             android:exported="true"
             android:theme="@style/Splashscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
